<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">


    <RelativeLayout
        android:id="@+id/relativeLayoutTopView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/whitebox_bg"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgSearch"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_baseline_search_24" />

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextViewLocations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_toRightOf="@+id/imgSearch"
            android:background="@null"
            android:ellipsize="end"
            android:hint="Type Your Location(Landmark Area)"
            android:paddingRight="50dp"
            android:text=""
            android:textColorHint="@color/black"
            android:textSize="16dp">
            <!--<requestFocus/>-->
        </AutoCompleteTextView>

        <Button
            android:id="@+id/bthGo"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/ripple_button"
            android:text="@string/btn_go"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:textStyle="normal" />

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/home_ver_recy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/relativeLayoutTopView"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

<!--    <RelativeLayout-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="match_parent"-->
<!--        android:layout_below="@+id/relativeLayoutTopView">-->

<!--        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout-->
<!--            android:id="@+id/swipeToRefresh"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content">-->

<!--            <ListView-->
<!--                android:id="@+id/listViewMess"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="12dp"-->
<!--                android:animationCache="false"-->
<!--                android:background="@android:color/transparent"-->
<!--                android:cacheColorHint="#00000000"-->
<!--                android:divider="@null"-->
<!--                android:drawSelectorOnTop="false"-->
<!--                android:fastScrollEnabled="false"-->
<!--                android:indicatorLeft="8dip"-->
<!--                android:indicatorRight="8dip"-->
<!--                android:listSelector="@android:color/transparent"-->
<!--                android:paddingBottom="50dp"-->
<!--                android:scrollbarSize="5dip"-->
<!--                android:scrollbars="vertical"-->
<!--                android:scrollingCache="false"-->
<!--                android:smoothScrollbar="true"-->
<!--                android:visibility="gone">-->

<!--                <include-->
<!--                    android:id="@+id/includeEmptyListviewMsg"-->
<!--                    layout="@layout/mess_listview_item"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginTop="20dp"-->
<!--                    android:visibility="visible" />-->
<!--            </ListView>-->

<!--        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>-->

<!--        <ProgressBar-->
<!--            android:id="@+id/progressCircle"-->
<!--            style="@android:style/Widget.ProgressBar.Inverse"-->
<!--            android:layout_width="30dp"-->
<!--            android:layout_height="30dp"-->
<!--            android:layout_alignParentBottom="true"-->
<!--            android:layout_centerHorizontal="true"-->
<!--            android:layout_centerVertical="true"-->
<!--            android:layout_gravity="center"-->
<!--            android:layout_marginBottom="60dp"-->
<!--            android:indeterminate="true"-->
<!--            android:indeterminateDrawable="@drawable/progress_bar"-->
<!--            android:visibility="gone" />-->

<!--    </RelativeLayout>-->

    <RelativeLayout
        android:id="@+id/relativeLayoutFilter"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"

        android:background="@color/go_btn_color">

        <LinearLayout
            android:id="@+id/filter"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"

            android:layout_toLeftOf="@+id/textView2"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical|center"
                android:layout_marginLeft="50dp"
                android:src="@drawable/ic_baseline_filter_alt_24" />

            <TextView
                android:id="@+id/lblFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:text="@string/filter"
                android:textColor="@color/white"
                android:textSize="18dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:background="@color/white" />

        <LinearLayout
            android:id="@+id/linearLayoutCuisineFilter"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/textView2"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical|center"
                android:layout_marginLeft="50dp"
                android:src="@drawable/ic_cuisine" />

            <TextView
                android:id="@+id/lblCousineFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:text="@string/cousine_filter"
                android:textColor="@color/white"
                android:textSize="18dp" />

        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>